# mathomatic

./: .gitignore  .travis.yml  Makefile.am  am.c  cmds.c  configure.ac  core.c  help.c  includes.h  lib.c  main.c  makefile  makefile.am  readme.md
lib/: makefile.am
primes/: makefile  makefile.am
